refactor(security): enhance OAuth2 login configuration
Improve the OAuth2 login flow by adding a custom success handler and updating CORS settings for better security and flexibility.